--- a/package.json
+++ b/package.json
@@ -5,11 +5,19 @@
   "author": "",
   "private": true,
   "license": "UNLICENSED",
+  "prisma": {
+    "seed": "ts-node prisma/seed.ts"
+  },
   "scripts": {
     "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "nest start",
     "start:dev": "nest start --watch",
+    "migrate:dev": "npx prisma migrate dev",
+    "prisma:seed": "npx prisma db seed",
+    "prisma:reset": "npx prisma migrate reset",
+    "prisma:generate": "npx prisma generate",
+    "prisma:generate:seed": "npx prisma db push && npx prisma db seed",
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
@@ -20,9 +28,17 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
+    "@apollo/server": "^4.10.2",
+    "@nestjs/apollo": "^12.1.0",
     "@nestjs/common": "^9.0.0",
+    "@nestjs/config": "^3.2.2",
     "@nestjs/core": "^9.0.0",
+    "@nestjs/graphql": "^12.1.1",
     "@nestjs/platform-express": "^9.0.0",
+    "@prisma/client": "^5.12.1",
+    "bcrypt": "^5.1.1",
+    "graphql": "^16.8.1",
+    "prisma": "^5.12.1",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.2.0"
   },
