Add env example

--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,10 @@
 # Database connection
-DATABASE_URL="postgresql://johndoe:randompassword@localhost:5432/mydb?schema=public"
+DATABASE_URL="mongodb+srv://v02shopee:V5eBlGpb0yCmkd62@cluster-ecom.xzhe2tz.mongodb.net/ecom-app?retryWrites=true&w=majority&appName=Cluster-Ecom"
+
+#Port
+PORT=4000
+
+#Token
+ACCESS_TOKEN_JWT_SECRET_KEY=ecom_access_token_jwt_secret_key
+REFRESH_TOKEN_JWT_SECRET_KEY=ecom_refresh_token_jwt_secret_key
+EXPIRES_ACCESS_TOKEN_IN_24_HOURS=60 * 60 * 24
