--- a/.env.example
+++ b/.env.example
@@ -8,3 +8,6 @@ PORT=4000
 ACCESS_TOKEN_JWT_SECRET_KEY=ecom_access_token_jwt_secret_key
 REFRESH_TOKEN_JWT_SECRET_KEY=ecom_refresh_token_jwt_secret_key
 EXPIRES_ACCESS_TOKEN_IN_24_HOURS=60 * 60 * 24
+
+GITHUB_CLIENT_ID =
+GITHUB_CLIENT_SECRET = 
