Init socket with Websocket JWT, Init private conversation with member

--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@nestjs/common": "^9.0.0",
     "@nestjs/config": "^3.2.2",
     "@nestjs/core": "^9.0.0",
+    "@nestjs/event-emitter": "^2.0.4",
     "@nestjs/graphql": "^12.1.1",
     "@nestjs/jwt": "^10.2.0",
     "@nestjs/mapped-types": "*",
