--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "class-validator": "^0.14.1",
     "graphql": "^16.8.1",
     "moment": "^2.30.1",
+    "mongoose": "^8.3.2",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
