--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
   "dependencies": {
     "@apollo/server": "^4.10.2",
     "@getbrevo/brevo": "^1.0.1",
+    "@langchain/openai": "^0.0.28",
     "@nestjs/apollo": "^12.1.0",
     "@nestjs/cache-manager": "^2.2.2",
     "@nestjs/common": "^9.0.0",
