--- a/package.json
+++ b/package.json
@@ -57,7 +57,8 @@
     "passport-local": "^1.0.0",
     "prisma": "^5.12.1",
     "reflect-metadata": "^0.1.13",
-    "rxjs": "^7.2.0"
+    "rxjs": "^7.2.0",
+    "socket.io": "^4.7.5"
   },
   "devDependencies": {
     "@nestjs/cli": "^9.0.0",
