update login google login

--- a/.env.example
+++ b/.env.example
@@ -17,5 +17,9 @@ BREVO_NAME_ADMIN=ShopeeV2
 GITHUB_CLIENT_ID =
 GITHUB_CLIENT_SECRET = 
 
-
-OPENAI_API_KEY =
+OPENAI_API_KEY =123
+GOOGLE_API_KEY = AIzaSyARIzN7trzwMF86sJQaQdEsiFshfRmjex0
+DATABASE_VECTOR_NAME= ecommerce_nest
+FRONT_DEPLOY=
+COLLECTION_VECTOR_NAME=vector_store_message
+NAMESPACE_VECTOR=ecommerce_nest.vector_store_message
