--- a/package.json
+++ b/package.json
@@ -30,8 +30,11 @@
   "dependencies": {
     "@apollo/server": "^4.10.2",
     "@getbrevo/brevo": "^1.0.1",
+    "@google/generative-ai": "^0.11.3",
     "@langchain/cohere": "^0.0.7",
     "@langchain/community": "^0.0.50",
+    "@langchain/google-genai": "^0.0.14",
+    "@langchain/google-vertexai": "^0.0.16",
     "@langchain/mongodb": "^0.0.1",
     "@langchain/openai": "^0.0.28",
     "@nestjs/apollo": "^12.1.0",
